2008-03-06  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/object/*.c: 
	Storage of implicit vector in matrices added. 
	A new method named as_index was also added to NspObject. 
	as_index is implemented in NspMatrix, NspBMatrix ans NspIVect. 
	as_index can use the implicit vector storage of 
	matrices. matint.c and sparse matrices were changed 
	to use as_index. 
			
2008-03-03  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/libspmf/spmf-IN.c (int_nsp_pdf): add a pdf function
	(2 files are added which correspond to an adaptation
	for nsp of the Catherine Loader dbinom 's package)

2008-03-03  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/libinteg/integ-IN.c (intg_func): add the case
	of infinite interval for intg
	* src/libinteg/fromquadpack.f: source from the netlib
	quadpack used by nsp, adapted for nsp and cleaned

2008-02-15  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/libinteg/integ-IN.c (int_int2d): 
	add int2d primitive together with its help page.
	src/libinteg/twodq.f have been modified to let
	vectorial evaluation of the function to integrate.
	Also the supplementary args parameter (in ode, intg,
	int2d) could be now any nsp object (see several 
	examples in the intg help page).

2008-02-13  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/*/*.c: 
	changes in fields management in order to 
	be able to check valid and unvalid affectation 
	in complex affectation i.e affectation which involves 
	attr_get_object_function modifiers like in Obj.val(x,y)=z 
	

2008-02-07  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/objects/MatOps.c (nsp_mat_has): 
	* src/objects/SMatrix.c (nsp_smatrix_has): 
	add method has for Mat and SMat.

2008-02-04  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>
	* src/libinteg/integ-IN.c (int_intg + others): add intg
	* src/libinteg/dqags.f: re-introduce author names
        * man/src/misc/intg.tex: intg man page
	
2008-01-21  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>
